--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
             height: 1.2em;
             animation: blink 0.7s infinite;
         }
+        .details{
+            justify-content: flex-end;
+            width: 100%;
+        }
         @keyframes blink {
             0% { opacity: 1; }
             50% { opacity: 0; }
